admin update - add hamburger navbar to admin page - changing edit and delete become icon - add some styles and responsive page on admin

--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -70,6 +70,11 @@ body{
     color: black;
 }
 
+.chosen.btn {
+    background-color: #A68961;
+    color: black;
+}
+
 .gold-btn {
     background-color: #cfab7b;
     color: black;
