--- a/views/admin-theaters.ejs
+++ b/views/admin-theaters.ejs
@@ -11,16 +11,23 @@
 
 <body class="bg-black font-raleway text-cfab7a">
   <div class="flex">
-    <div class="w-64 gold-btn text-white">
+    <div class="fixed inset-y-0 w-64 text-white gold-btn">
       <!-- Navigation Bar -->
-      <div class="text-xl font-semibold py-4 px-6">Admin Name</div>
+      <div class="flex items-center px-6 py-4 text-xl font-semibold">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+        </svg>
+        <span class="ml-2">Admin Name</span>
+      </div>
       <hr class="border-t border-gray-600">
       <ul class="space-y-2">
-        <li><a href="/admin/movies" class="block py-2 px-6 custom-btn">Movies</a></li>
-        <li><a href="/admin/theaters" class="block py-2 px-6 custom-btn">Theaters</a></li>
-        <li><a href="/admin/studios" class="block py-2 px-6 custom-btn">Studios</a></li>
-        <li><a href="/admin/seats" class="block py-2 px-6 custom-btn">Seats</a></li>
-        <li><a href="/admin/schedules" class="block py-2 px-6 custom-btn">Schedules</a></li>
+        <li><a href="/admin/movies" class="block px-6 py-2 font-semibold custom-btn">Movies</a></li>
+        <li><a href="/admin/theaters" class="block px-6 py-2 font-semibold custom-btn">Theaters</a></li>
+        <li><a href="/admin/studios" class="block px-6 py-2 font-semibold custom-btn">Studios</a></li>
+        <li><a href="/admin/seats" class="block px-6 py-2 font-semibold custom-btn">Seats</a></li>
+        <li><a href="/admin/schedules" class="block px-6 py-2 font-semibold custom-btn">Schedules</a></li>
       </ul>
     </div>
     <div class="flex-1 max-w-screen-xl mx-auto overflow-x-auto overflow-y-auto rounded-lg shadow-md">
@@ -30,7 +37,7 @@
       <div class="flex justify-end px-6 py-4">
         <a href="/admin/theaters/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Item</a>
       </div>
-      <table class="w-full whitespace-no-wrap border-2 border-gold table-auto table-striped">
+      <table class="w-full whitespace-no-wrap border-2 table-auto border-gold table-striped">
         <thead>
           <tr class="text-left">
             <th class="sticky top-0 px-3 py-2 border-2 border-gold">Name</th>
@@ -55,13 +62,25 @@
               <td class="px-3 py-2 border-2 border-gold">
                 <img src='/images/<%= theater.theater_images %>' class="w-16 h-24">
               </td>
-              <td class="flex items-center px-3 py-2 space-x-2 border-t border-gold">
-                <a href="/admin/theaters/edit/<%= theater.theater_id %>"
-                  class="text-blue-500 underline hover:text-blue-700">Edit</a>
-                <form action="/delete-theater/<%= theater.theater_id %>" method="post" class="inline">
-                  <input type="submit" value="Delete"
-                    class="text-red-500 bg-black underline cursor-pointer hover:text-red-700">
-                </form>
+              <td class="px-3 py-2 border-2 border-gold">
+                <div class="flex items-center justify-center">
+                  <a href="/admin/theaters/edit/<%= theater.theater_id %>" class="text-blue-500 hover:text-blue-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                      stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                    </svg>
+                  </a>
+                  <form action="/delete-theater/<%= theater.theater_id %>" method="post" class="inline">
+                    <button type="submit" class="text-red-500 hover:text-red-700">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                      </svg>
+                    </button>
+                  </form>
+                </div>
               </td>
             </tr>
             <% }); %>
