--- a/views/admin-studios.ejs
+++ b/views/admin-studios.ejs
@@ -5,47 +5,93 @@
   <title>Admin | Studios</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
-  <link rel="stylesheet" href="/styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="bg-black font-raleway text-cfab7a">
-  <header class="px-16 py-6">
-    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
-  </header>
-  <div class="flex justify-center">
-    <div class="relative w-full max-w-screen-xl overflow-x-auto overflow-y-auto rounded-lg shadow md:max-w-screen-2xl">
-      <div class="flex justify-end">
+  <div class="flex">
+    <div id="navbar"
+      class="fixed inset-y-0 w-64 text-white transition-transform duration-300 ease-in-out transform -translate-x-full gold-btn">
+      <!-- Navigation Bar -->
+      <header class="flex items-center justify-between px-6 py-4 text-xl font-semibold">
+        <div class="flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+          </svg>
+          <span class="ml-2">Admin Name</span>
+        </div>
+        <svg id="close" class="hidden w-6 h-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none"
+          viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+        </svg>
+      </header>
+      <hr class="border-t border-gray-600">
+      <ul class="space-y-2">
+        <li><a href="/admin/movies" class="block px-6 py-2 font-semibold custom-btn">Movies</a></li>
+        <li><a href="/admin/theaters" class="block px-6 py-2 font-semibold custom-btn">Theaters</a></li>
+        <li><a href="/admin/studios" class="block px-6 py-2 font-semibold custom-btn">Studios</a></li>
+        <li><a href="/admin/seats" class="block px-6 py-2 font-semibold custom-btn">Seats</a></li>
+        <li><a href="/admin/schedules" class="block px-6 py-2 font-semibold custom-btn">Schedules</a></li>
+      </ul>
+    </div>
+    <div id="hamburger-container"
+      class="fixed inset-y-0 left-0 flex items-center pl-4 pr-8 bg-black cursor-pointer custom-btn ">
+      <svg id="hamburger" class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </div>
+    <div class="flex-1 max-w-screen-xl mx-auto overflow-x-auto overflow-y-auto rounded-lg shadow-md">
+      <header class="py-6 ">
+        <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
+      </header>
+      <div class="flex justify-end py-4">
         <a href="/admin/studios/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add Studio</a>
       </div>
-      <table class="relative w-full whitespace-no-wrap border-2 border-gold table-auto table-striped">
+      <table class="relative w-full whitespace-no-wrap border-2 table-auto border-gold table-striped">
         <thead>
           <tr class="text-left">
-            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Studio Name</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Type</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Theater Name</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Actions</th>
+            <th class="sticky top-0 px-3 py-2 text-center border-2 border-gold">Studio</th>
+            <th class="sticky top-0 px-3 py-2 text-center border-2 border-gold">Type</th>
+            <th class="sticky top-0 px-3 py-2 text-center border-2 border-gold">Theater</th>
+            <th class="sticky top-0 px-3 py-2 text-center border-2 border-gold">Actions</th>
           </tr>
         </thead>
         <tbody>
           <% studios.forEach((studio)=> { %>
             <tr class="border-2 border-gold">
-              <td class="px-3 py-2 border-2 border-gold ">
+              <td class="px-3 py-2 text-center border-2 border-gold ">
                 <%= studio.name %>
               </td>
-              <td class="px-3 py-2 border-2 border-gold ">
+              <td class="order-2 px-3 py-2 text-center border-gold ">
                 <%= studio.type %>
               </td>
-              <td class="px-3 py-2 border-2 border-gold ">
+              <td class="px-3 py-2 text-center border-2 border-gold ">
                 <%= studio.theater_name %>
               </td>
-              <td class="flex items-center px-3 py-2 space-x-2 border-t border-gold ">
-                <a href="/admin/studios/edit/<%= studio.studio_id %>"
-                  class="text-blue-500 underline hover:text-blue-700">Edit</a>
-                <form action="/delete-studio/<%=studio.studio_id%>" method="POST" class="inline">
-                  <input type="submit" value="Delete" class="text-red-500 underline cursor-pointer hover:text-red-700">
-                </form>
+              <td class="px-3 py-2 border-t border-gold ">
+                <div class="flex items-center justify-center">
+                  <a href="/admin/studios/edit/<%= studio.studio_id %>"
+                    class="text-blue-500 underline hover:text-blue-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                      stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                    </svg>
+                  </a>
+                  <form action="/delete-studio/<%=studio.studio_id%>" method="POST" class="inline">
+                    <button type="submit" class="text-red-500 underline cursor-pointer hover:text-red-700">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                      </svg>
+                    </button>
+                  </form>
+                </div>
               </td>
             </tr>
             <% })%>
@@ -53,7 +99,28 @@
       </table>
     </div>
   </div>
+  <script>
+    const navbar = document.getElementById('navbar');
+    const hamburger = document.getElementById('hamburger');
+    const close = document.getElementById('close');
+    const hamburgerContainer = document.getElementById('hamburger-container');
+
+    hamburgerContainer.addEventListener('click', () => {
+      navbar.classList.add('-translate-x-0');
+      navbar.classList.remove('-translate-x-full');
+      hamburgerContainer.classList.add('hidden');
+      close.classList.remove('hidden');
+    });
+
+    close.addEventListener('click', () => {
+      navbar.classList.remove('-translate-x-0');
+      navbar.classList.add('-translate-x-full');
+      hamburgerContainer.classList.remove('hidden');
+      close.classList.add('hidden');
+    });
+  </script>
 </body>
+
 
 
 </html>
