--- a/views/admin-theaters-add.ejs
+++ b/views/admin-theaters-add.ejs
@@ -19,7 +19,7 @@
     <div>
       <h1 class="mb-3 text-3xl font-semibold">Create Theater</h1>
       <form action="/create-theater" method="POST" enctype="multipart/form-data"
-        class="w-full max-w-lg p-8 rounded-md custom-btn">
+        class="w-full max-w-lg p-8 rounded-md gold-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="name">Name</label>
@@ -54,6 +54,12 @@
       </form>
     </div>
   </div>
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
