--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="leading-normal tracking-normal font-raleway bg-black text-cfab7a">
+<body class="leading-normal tracking-normal bg-black font-raleway text-cfab7a">
   <!-- Navbar -->
   <nav class="p-10 bg-black text-cfab7a">
     <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
@@ -148,12 +148,17 @@
     <!-- Logout Button -->
     <div class="flex justify-center mt-5">
       <form action="/logout" method="post">
-        <button class="px-6 py-2 text-black custom-btn  rounded"
-          type="submit">Logout</button>
+        <button class="px-6 py-2 text-black rounded custom-btn" type="submit">Logout</button>
       </form>
     </div>
     </head>
   </div>
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
 
   <script>
     function countdown(element, timestamp) {
