--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -168,9 +168,12 @@
           <h1 class="text-2xl font-semibold">Select Seat <%=scheduleId%>
           </h1>
           <hr class="border-cfab7a">
-          <p class="font-semibold">Theater Location: <%=schedule.theater_name%></p>
-          <p class="font-semibold">Time: <%=schedule.hours%> </p>
-          <p class="font-semibold">Date: <%=schedule.date%></p>
+          <p class="font-semibold">Theater Location: <%=schedule.theater_name%>
+          </p>
+          <p class="font-semibold">Time: <%=schedule.hours%>
+          </p>
+          <p class="font-semibold">Date: <%=schedule.date%>
+          </p>
           <div class="space-y-4">
             <div class="flex justify-around">
               <div class="flex items-center space-x-2">
@@ -234,6 +237,12 @@
       </div>
     </div>
   </section>
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
