--- a/views/theaters.ejs
+++ b/views/theaters.ejs
@@ -84,6 +84,13 @@
         <% }) %>
   </div>
 
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
