--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -21,7 +21,8 @@
             <path stroke-linecap="round" stroke-linejoin="round"
               d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
           </svg>
-            <div>Welcome, <%= username %></div>
+          <div>Welcome, <%= username %>
+          </div>
         </div>
         <svg id="close" class="hidden w-6 h-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
@@ -127,6 +128,14 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
+
   <script>
     const navbar = document.getElementById('navbar');
     const hamburger = document.getElementById('hamburger');
