--- a/views/admin-schedules-add.ejs
+++ b/views/admin-schedules-add.ejs
@@ -85,6 +85,13 @@
       </form>
     </div>
   </div>
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
+  
   <script>
     function updateStudioOptions() {
       var theaterSelect = document.getElementById('theater');
