--- a/views/admin-schedules-edit.ejs
+++ b/views/admin-schedules-edit.ejs
@@ -88,6 +88,12 @@
       </form>
     </div>
   </div>
+  <!-- Footer -->
+  <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 TixOnline. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 
 
