--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,8 +29,8 @@
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                 id="password" type="password" placeholder="Password" name="password" required>
-                                <input type="checkbox" name="remember" id="remember">
-                                <label for="remember">Remember Me</label>
+                            <input type="checkbox" name="remember" id="remember">
+                            <label for="remember">Remember Me</label>
                             <div class="flex items-center justify-end">
                                 <button
                                     class="px-3 py-2 font-semibold text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
@@ -43,5 +43,11 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2023 TixOnline. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="/script/script.js" defer></script>
 </body>
