--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Login Admin</title>
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/styles/fe_style.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Login Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/fe_style.css">
+</head>
 
 <body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
     <a href="/" class="absolute top-0 right-0 m-4 text-4xl font-semibold hover:text-white">TixOnline</a>
@@ -19,7 +20,7 @@
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Admin Login</h2>
                 <form method="POST" action="/login-admin">
                     <div class="mb-4">
-                        <div class="px-3 py-8 font-semibold rounded custom-btn">
+                        <div class="px-3 py-8 font-semibold rounded gold-btn">
                             <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
@@ -40,6 +41,12 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2023 TixOnline. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="/script/script.js" defer></script>
 </body>
 
