--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -19,9 +19,9 @@
       <div class="text-[#cfab7a] mt-4 lg:mt-0 flex flex-wrap justify-center">
         <a href="/" class="px-4 hover:text-white nav-item">Home</a>
         <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll nav-item active">Now Playing</a>
-        <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll nav-item">Coming Soon</a>
+        <a href="/" class="px-4 hover:text-white smooth-scroll nav-item">Coming Soon</a>
         <a href="/theaters" class="px-4 hover:text-white nav-item">Theaters</a>
-        <a href="/#about" class="px-4 hover:text-white smooth-scroll nav-item">About</a>
+        <a href="/" class="px-4 hover:text-white smooth-scroll nav-item">About</a>
       </div>
       <div class="flex items-center mt-4 lg:mt-0">
         <% if (session && session.username) { %>
@@ -48,15 +48,15 @@
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold">Now Playing</h1>
       <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET" class="mb-4">
-        <select id="selectedCity" name="selectedCity" class="px-4 py-2 mr-4 bg-black border-2 rounded border-cfab7a"
-          onchange="this.form.submit();">
+        <select id="selectedCity" name="selectedCity"
+          class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
           <% cities.forEach((city)=> { %>
             <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
             </option>
             <% }) %>
         </select>
-        <select id="selectedDate" name="selectedDate" class="px-4 py-2 bg-black border-2 rounded border-cfab7a"
-          onchange="this.form.submit();">
+        <select id="selectedDate" name="selectedDate"
+          class="px-4 py-2 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
           <% dateSelector.forEach((date)=> { %>
             <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
             </option>
@@ -180,6 +180,13 @@
           class="px-4 py-2 font-semibold text-white bg-red-500 rounded hover:bg-red-700">Close</button>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+      <div class="container mx-auto text-center">
+        <p>&copy; 2023 TixOnline. All rights reserved.</p>
+      </div>
+    </footer>
 
     <script src="/script/script.js" defer></script>
 </body>
