--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -192,6 +192,13 @@
         class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
     </div>
 
+    <!-- Footer -->
+    <footer class="bg-black text-cfab7a py-6 text-[#cfab7a]">
+      <div class="container mx-auto text-center">
+        <p>&copy; 2023 TixOnline. All rights reserved.</p>
+      </div>
+    </footer>
+
     <script>
       function hidePopup() {
         var popup = document.getElementById("popup");
