--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -216,21 +216,30 @@
             <hr class="w-1/2 mx-auto mb-4 border-cfab7a">
           </div>
 
-          <button id="cancelButton" class="px-4 py-2 mr-4 text-center text-white rounded custom-btn"
-            onclick="cancelSeats()">Cancel</button>
+          <button id="showPopup" onclick="bookSeats()" class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded cursor-pointer custom-btn hover:custom-btn">Confirm</button>
 
-          <button action="/pay" method="post">
-            <input type="submit" value="Buy" class="px-4 py-2 text-center text-white rounded cursor-pointer custom-btn"
-              onclick="confirmSeats()">
-          </button>
-
-          <div id="popup" class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-50">
-            <div class="p-6 text-black bg-white rounded">
-              <h2 class="mb-4 text-2xl font-semibold">Confirmation</h2>
-              <p class="mb-4">This is a pop-up message.</p>
+                <!-- Pop-up -->
+          <div id="popup" class="fixed inset-0 bg-gray-500 bg-opacity-75 flex justify-center items-center hidden">
+            <div class="bg-white rounded-lg p-8">
+              <h2 class="text-2xl font-bold mb-4">Confirmation</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="mt-6 flex justify-end">
+                <!-- Tombol pada pop-up -->
+                <button id="cancelButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="cancelSeats()">
+                  Cancel
+                </button>
+                <form action="/pay" method="post">
+                  <input type="submit" value="Buy" onclick="confirmSeats()" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
+                </form>
+              </div>
             </div>
           </div>
         </div>
+
+    
+
+        
+       
       </div>
     </div>
   </section>
