--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -70,6 +70,10 @@ body{
     color: black;
 }
 
+.custom-btn:hoverblack {
+    background-color: black;
+    color: #cfab7a;
+}
 .chosen.btn {
     background-color: #A68961;
     color: black;
