--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -20,6 +20,10 @@
       background-color: #6a5840;
     }
 
+    .bg-ticket{
+      background-color: #CFAB7A;
+    }
+
     .sold {
       background-color: #c4c4c4;
       pointer-events: none;
@@ -221,28 +225,97 @@
 
           <button id="showPopup" onclick="bookSeats()" class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded cursor-pointer custom-btn hover:custom-btn">Confirm</button>
 
-                <!-- Pop-up -->
-          <div id="popup" class="fixed inset-0 bg-gray-500 bg-opacity-75 flex justify-center items-center hidden">
-            <div class="bg-white rounded-lg p-8">
-              <h2 class="text-2xl font-bold mb-4">Confirmation</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <div class="mt-6 flex justify-end">
-                <!-- Tombol pada pop-up -->
-                <button id="cancelButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="cancelSeats()">
-                  Cancel
-                </button>
-                <form action="/pay" method="post">
-                  <input type="submit" value="Buy" onclick="confirmSeats()" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
-                </form>
+            <!-- Pop-up ticket -->
+          <div id="popup" class="fixed inset-0 flex justify-center items-center hidden">
+            <!-- component -->
+              <div class="max-w-md w-full h-full mx-auto z-10 rounded-3xl text-black font-raleway">
+                <div class="flex flex-col">
+                  <div class="bg-ticket relative drop-shadow-2xl  rounded-3xl p-4 m-4">
+                    <div class="flex-none sm:flex">
+                      <div class=" relative h-32 w-32   sm:mb-0 mb-3 hidden">
+                        <img src="https://tailwindcomponents.com/storage/avatars/njkIbPhyZCftc4g9XbMWwVsa7aGVPajYLRXhEeoo.jpg" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
+                        <a href="#"
+                          class="absolute -right-2 bottom-2   -ml-3  text-black p-1 text-xs bg-green-400 hover:bg-green-500 font-medium tracking-wider rounded-full transition ease-in duration-300">
+                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                            class="h-4 w-4">
+                            <path
+                              d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z">
+                            </path>
+                          </svg>
+                        </a>
+                      </div>
+                      <div class="flex-auto justify-evenly">
+                        <div class="flex items-center justify-between">
+                          <div class="flex items-center  my-3">
+                            <h1 class="font-bold font-raleway text-black text-m ">TixOnline</h1>
+                          </div>
+                        </div>
+                        <div class="border-b border-dashed border-b-2  border-black"></div>
+                        <div class="flex items-center">
+                          <div class="flex flex-col">
+                            <div class="mt-2 p-2 w-full flex-none text-2xl font-extrabold leading-none">Ringkasan Order</div>
+                          </div>
+                          <div class="flex flex-col mx-auto">
+
+                            </div>
+                            <div class="flex flex-col ">
+                            </div>
+                          </div>
+                          <div class="flex items-center mb-2 p-2">
+                            <div class="flex flex-col">
+                              <span class="font-bold text-lg">Detail Transaksi</span>
+                            </div>
+                          </div>
+                          <div class="flex items-center p-2 text-m">
+                            <div class="flex flex-col">
+                              <div>Regular Seat</div>
+                            </div>
+                            <div class="flex flex-col ml-auto">
+                              <div>Rp. 70.000</div>
+                            </div>
+                          </div>
+                            <div class="flex items-center p-2 text-m">
+                            <div class="flex flex-col">
+                              <div>Kursi</div>
+                            </div>
+                            <div class="flex flex-col ml-auto">
+                              <div>A1, A2, A3</div>
+                            </div>
+                          </div>
+                          <div class="border-b border-dashed border-b-2 mb-2 pt-5 border-black">
+                          </div>
+                          <div class="flex items-center mb-2 p-2 text-lg">
+                            <div class="flex flex-col">
+                              <div class="font-bold">Total bayar</div>
+                            </div>
+                            <div class="flex flex-col ml-auto">
+                              <div class="font-bold">Rp. 70.000</div>
+                            </div>
+                          </div>
+                          <div class="flex items-center mb-2 p-2 text-lg">
+                            <div class="flex flex-col">
+                              <button id="cancelButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="cancelSeats()">
+                               Cancel
+                              </button>
+                            </div>
+                            <div class="flex flex-col ml-auto">
+                              <form action="/pay" method="post">
+                            <input type="submit" value="Buy" onclick="confirmSeats()" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
+                          </form>
+                            </div>
+                          </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> 
               </div>
             </div>
           </div>
         </div>
-
-    
-
-        
-       
       </div>
     </div>
   </section>
